<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#ffffff"
    tools:context=".EditStoreFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/common_padding_default"
        android:orientation="vertical">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/hint_store_name"
            app:endIconMode="clear_text"
            app:helperText="@string/helper_required"
            app:counterMaxLength="@integer/counter_max_name"
            app:counterEnabled="true"
            app:startIconDrawable="@drawable/ic_store"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="@integer/counter_max_name"
                android:inputType="textCapWords"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/hint_store_phone"
            app:endIconMode="clear_text"
            app:helperText="@string/helper_required"
            app:startIconDrawable="@drawable/ic_phone"
            android:layout_marginTop="@dimen/common_padding_default"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilWebsite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/hint_store_website"
            app:endIconMode="clear_text"
            app:helperText="@string/helper_required"
            app:startIconDrawable="@drawable/ic_link"
            android:layout_marginTop="@dimen/common_padding_default"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etWebsite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minLines="@integer/lines_url_website"
                android:maxLines="@integer/lines_url_website"
                android:textAppearance="?attr/textAppearanceCaption"
                android:textColor="@color/url_color"
                android:inputType="textMultiLine"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_marginTop="@dimen/common_padding_default"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            >
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilStoreImg"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/hint_store_img"
                app:endIconMode="clear_text"
                app:helperText="@string/helper_required"
                app:startIconDrawable="@drawable/ic_link"
                android:layout_marginTop="@dimen/common_padding_default"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etStoreImg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minLines="@integer/lines_url_photo"
                    android:maxLines="@integer/lines_url_photo"
                    android:textAppearance="?attr/textAppearanceCaption"
                    android:textColor="@color/url_color"
                    android:inputType="textMultiLine"

                    />

            </com.google.android.material.textfield.TextInputLayout>
            <ImageView
                android:id="@+id/imgStore"
                android:layout_width="@dimen/store_img_thumb_size"
                android:layout_height="@dimen/store_img_thumb_size"
                android:src="@drawable/ic_image"
                android:contentDescription="@string/store_img"
                android:layout_marginStart="@dimen/common_padding_default"
                />
        </LinearLayout>

    </LinearLayout>

</FrameLayout>